--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "dev": "nodemon ./index.js"
+    "dev": "node ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^7.5.3",
     "socket.io": "^2.3.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
+
   "description": ""
 }
